CKS/01-Cluster-setup-15%/client.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: client
  name: client
  namespace: cluster-setup
spec:
  containers:
  - image: radial/busyboxplus:curl
    name: client
    command: 
      ["sh", "-c", "while true; do curl -m 3 nginx-svc.cluster-setup.svc.cluster.local; sleep 5; done",]
    ports:                               ##serviceName.NamespaceName.svc.cluster.local  
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
