CKS/01-Cluster-setup-15%/allow-netpol.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all-ingress
#   namespace: cluster-setup
# spec:
#   podSelector: {}
#   ingress:
#   - {}
#   policyTypes:
#   - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: cluster-setup
spec:
  podSelector: 
    matchLabels:
      role: db
  ingress:
  - from:
    - podSelector: 
        matchLabels:
          role: db  
  policyTypes:
  - Ingress
